--- a/ch01/create_organization_using_module.yml
+++ b/ch01/create_organization_using_module.yml
@@ -11,6 +11,6 @@
         name: Satellite
         controller_host: https://controller.node/
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
