--- a/ch01/get_organization_using_api.yml
+++ b/ch01/get_organization_using_api.yml
@@ -10,7 +10,7 @@
       uri:
         url: https://controller.node/api/v2/organizations/
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
