--- a/ch02/inventory_vars/variables.yml
+++ b/ch02/inventory_vars/variables.yml
@@ -22,26 +22,26 @@ aap_setup_prep_inv_vars:
   execution_nodes:
     node_type: execution
   all:
-    admin_password: 'secret123'
+    admin_password: 'Proteu690201'
     pg_host: 'database'
     pg_port: '5432'
 
     pg_database: 'awx'
     pg_username: 'awx'
-    pg_password: 'secret123'
+    pg_password: 'Proteu690201'
     pg_sslmode: 'prefer'  # set to 'verify-full' for client-side enforced SSL
 
     registry_url: 'registry.redhat.io'
     receptor_listener_port: 27199
 
-    automationhub_admin_password: 'secret123'
+    automationhub_admin_password: 'Proteu690201'
 
     automationhub_pg_host: 'database'
     automationhub_pg_port: '5432'
 
     automationhub_pg_database: 'automationhub'
     automationhub_pg_username: 'automationhub'
-    automationhub_pg_password: 'secret123'
+    automationhub_pg_password: 'Proteu690201'
     automationhub_pg_sslmode: 'prefer'
 
     automationhub_main_url: 'https://hub'
@@ -55,14 +55,14 @@ aap_setup_prep_inv_vars:
     # automationhub_collection_signing_service_script =  /absolute/path/to/script/that/signs
 
     sso_keystore_password: 'password'
-    sso_console_admin_password: 'secret123'
+    sso_console_admin_password: 'Proteu690201'
     sso_automationcatalog_create_user_group: true
 
     # Automation Catalog Configuration
     automationcatalog_pg_host: 'database'
     automationcatalog_pg_port: "5432"
     automationcatalog_pg_username: "automationservicescatalog"
-    automationcatalog_pg_password: "secret123"
+    automationcatalog_pg_password: "Proteu690201"
     automationcatalog_pg_database: "automationservicescatalog"
     automationcatalog_controller_verify_ssl: "false"
 
