--- a/ch04/controller/create_user_groups_module.yml
+++ b/ch04/controller/create_user_groups_module.yml
@@ -15,7 +15,7 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Create team
@@ -26,7 +26,7 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Add jdoe to the member role of My Team
@@ -37,6 +37,6 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
