--- a/ch04/settings/aap_settings_api.yml
+++ b/ch04/settings/aap_settings_api.yml
@@ -8,7 +8,7 @@
       uri:
         url: https://controller.node/api/v2/settings/all/
         user: admin
-        password: secret123
+        password: Proteu690201
         method: PATCH
         validate_certs: false
         force_basic_auth: true
