--- a/ch05/credentials/credentials_module.yml
+++ b/ch05/credentials/credentials_module.yml
@@ -32,7 +32,7 @@
             rest_username: "{% raw %}{{ rest_username }}{% endraw %}"
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Create Credentials
@@ -46,6 +46,6 @@
           rest_password: password
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
