--- a/ch05/organizations/organizations_module.yml
+++ b/ch05/organizations/organizations_module.yml
@@ -13,6 +13,6 @@
           - Ansible Galaxy
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
