--- a/ch06/roles/set_role_using_module.yml
+++ b/ch06/roles/set_role_using_module.yml
@@ -15,7 +15,7 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Set user to admin over inventory
@@ -26,6 +26,6 @@
           - Demo Inventory
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
