--- a/ch10/projects/set_project_using_module.yml
+++ b/ch10/projects/set_project_using_module.yml
@@ -19,6 +19,6 @@
         update_project: true
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
