--- a/ch12/controller/project_update.yml
+++ b/ch12/controller/project_update.yml
@@ -17,6 +17,6 @@
         interval: 10
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
