--- a/ch04/license/aap_license_role.yml
+++ b/ch04/license/aap_license_role.yml
@@ -5,7 +5,7 @@
   vars:
     controller_hostname: https://controller.node
     controller_username: admin
-    controller_password: secret123
+    controller_password: Proteu690201
     controller_validate_certs: false
     controller_license:
       manifest_file: manifest_file.zip
