--- a/ch05/credentials/credential_type_api.yml
+++ b/ch05/credentials/credential_type_api.yml
@@ -8,7 +8,7 @@
       uri:
         url: https://controller.node/api/v2/credential_types/
         user: admin
-        password: secret123
+        password: Proteu690201
         method: POST
         validate_certs: false
         force_basic_auth: true
