--- a/ch05/credentials/credentials_api.yml
+++ b/ch05/credentials/credentials_api.yml
@@ -8,7 +8,7 @@
       uri:
         url: https://controller.node/api/v2/organizations/?name=Default
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
@@ -24,7 +24,7 @@
       uri:
         url: https://controller.node/api/v2/credential_types/?name=REST+API+Credential
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
@@ -40,7 +40,7 @@
       uri:
         url: https://controller.node/api/v2/credentials/
         user: admin
-        password: secret123
+        password: Proteu690201
         method: POST
         validate_certs: false
         force_basic_auth: true
