--- a/ch05/credentials/export_credential_types.yml
+++ b/ch05/credentials/export_credential_types.yml
@@ -9,7 +9,7 @@
   vars:
     controller_hostname: https://controller.node
     controller_username: admin
-    controller_password: secret123
+    controller_password: Proteu690201
     controller_validate_certs: false
 
   tasks:
