--- a/ch06/hub/create_groups_module.yml
+++ b/ch06/hub/create_groups_module.yml
@@ -12,7 +12,7 @@
         state: present
         ah_host: https://ah.node
         ah_username: admin
-        ah_password: secret123
+        ah_password: Proteu690201
         ah_path_prefix: galaxy
         validate_certs: false
 
@@ -25,7 +25,7 @@
         state: present
         ah_host: https://ah.node
         ah_username: admin
-        ah_password: secret123
+        ah_password: Proteu690201
         ah_path_prefix: galaxy
         validate_certs: false
 ...
