--- a/ch06/roles/set_role_api.yml
+++ b/ch06/roles/set_role_api.yml
@@ -8,7 +8,7 @@
       uri:
         url: https://controller.node/api/v2/organizations/?name=Default
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
@@ -24,7 +24,7 @@
       uri:
         url: https://controller.node/api/v2/users/
         user: admin
-        password: secret123
+        password: Proteu690201
         method: POST
         validate_certs: false
         force_basic_auth: true
@@ -45,7 +45,7 @@
       uri:
         url: https://controller.node/api/v2/users/?username=joe123
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
@@ -61,7 +61,7 @@
       uri:
         url: "https://controller.node/api/v2/job_templates/?name=Demo%20Job%20Template"
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
@@ -77,7 +77,7 @@
       uri:
         url: "https://controller.node{{job_template_data.json.results[0].related.object_roles}}?search=Execute"
         user: admin
-        password: secret123
+        password: Proteu690201
         method: GET
         validate_certs: false
         force_basic_auth: true
@@ -93,7 +93,7 @@
       uri:
         url: "https://controller.node{{job_object_role_id.json.results[0].related.users}}"
         user: admin
-        password: secret123
+        password: Proteu690201
         method: POST
         validate_certs: false
         force_basic_auth: true
