--- a/ch07/inventory_creation/aap_inventory_module.yml
+++ b/ch07/inventory_creation/aap_inventory_module.yml
@@ -14,7 +14,7 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Add host
@@ -27,7 +27,7 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Add group
@@ -39,6 +39,6 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
