--- a/ch07/inventory_creation/config/controller_auth.yml
+++ b/ch07/inventory_creation/config/controller_auth.yml
@@ -2,6 +2,6 @@
 ---
 controller_hostname: https://controller.node
 controller_username: admin
-controller_password: secret123
+controller_password: Proteu690201
 controller_validate_certs: false
 ...
