--- a/ch09/collection/publish.yml
+++ b/ch09/collection/publish.yml
@@ -8,7 +8,7 @@
   vars:
     ah_host: https://hub.node/
     ah_username: admin
-    ah_password: secret123
+    ah_password: Proteu690201
     ah_path_prefix: galaxy
     ah_validate_certs: false
   pre_tasks:
@@ -35,7 +35,7 @@
         auto_approve: false
         ah_host: https://hub.node/
         ah_username: admin
-        ah_password: secret123
+        ah_password: Proteu690201
         ah_path_prefix: galaxy
         validate_certs: false
 ...
