--- a/ch09/controller/controller_ee_modules.yml
+++ b/ch09/controller/controller_ee_modules.yml
@@ -13,6 +13,6 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
