--- a/ch10/projects/playbook_dir/playbook.yml
+++ b/ch10/projects/playbook_dir/playbook.yml
@@ -13,7 +13,7 @@
         state: present
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 
     - name: Include task list in play
