--- a/ch11/set_workflow_ch11.yml
+++ b/ch11/set_workflow_ch11.yml
@@ -6,7 +6,7 @@
   vars:
     controller_hostname: https://controller.node
     controller_username: admin
-    controller_password: secret123
+    controller_password: Proteu690201
     controller_validate_certs: false
     controller_configuration_async_delay: 4
     controller_configuration_workflow_async_retries: 50
