--- a/ch12/hub/configs/ah_auth.yml
+++ b/ch12/hub/configs/ah_auth.yml
@@ -2,7 +2,7 @@
 ---
 ah_host: https://hub.node
 ah_username: admin
-ah_password: secret123
+ah_password: Proteu690201
 ah_path_prefix: galaxy
 ah_validate_certs: false
 ...
