--- a/ch12/hub/publish_collection.yml
+++ b/ch12/hub/publish_collection.yml
@@ -13,7 +13,7 @@
         auto_approve: false
         ah_host: https://hub.node
         ah_username: admin
-        ah_password: secret123
+        ah_password: Proteu690201
         ah_path_prefix: galaxy
         validate_certs: false
 ...
