--- a/ch14/set_instance_group_using_module.yml
+++ b/ch14/set_instance_group_using_module.yml
@@ -13,6 +13,6 @@
           - controller
         controller_host: https://controller.node
         controller_username: admin
-        controller_password: secret123
+        controller_password: Proteu690201
         validate_certs: false
 ...
