--- a/ch01/create_organization_using_module.yml
+++ b/ch01/create_organization_using_module.yml
@@ -9,7 +9,7 @@
     - name: Create Organization
       ansible.controller.organization:
         name: Satellite
-        controller_host: https://controller.node/
+        controller_host: https://aap.lab.local/
         controller_username: admin
         controller_password: Proteu690201
         validate_certs: false
