--- a/ch01/create_organization_using_role.yml
+++ b/ch01/create_organization_using_role.yml
@@ -15,5 +15,5 @@
     - awx.awx
     - redhat_cop.controller_configuration
   roles:
-    - redhat_cop.controller_configuration.organizations
+    - organizations
 ...
