--- a/ch01/create_organization_using_role.yml
+++ b/ch01/create_organization_using_role.yml
@@ -19,5 +19,5 @@
   tasks:
     - name: Use organizations role from collection
       ansible.builtin.include_role:
-        name: organizations
+        name: redhat_cop.controller_configuration.organizations
 ...
