--- a/ch01/create_organization_using_role.yml
+++ b/ch01/create_organization_using_role.yml
@@ -3,6 +3,7 @@
   hosts: localhost
   gather_facts: false
   connection: local
+
   vars:
     controller_hostname: controller.node/
     controller_username: admin
@@ -11,13 +12,8 @@
     controller_organizations:
       - name: Satellite
       - name: Default
-  collections:
-    - awx.awx
-    - redhat_cop.controller_configuration
-  # roles:
-    # - organizations
+
   tasks:
     - name: Use organizations role from collection
-      include_role:
-        name: organizations
-...
+      ansible.builtin.include_role:
+        name: redhat_cop.controller_configuration.organizations
